fixed spacing and alignment issues for contact info in footer.

--- a/Andrew-Marks-Portfolio-Website/css/style.css
+++ b/Andrew-Marks-Portfolio-Website/css/style.css
@@ -334,10 +334,10 @@ mobile and small screens
 
     .contact--contact-title {
         display: flex;
-        justify-content: left;
+        justify-content: center;
         margin-left: 24px;
         margin-right: 24px;
-        margin-top: 32px;
+        margin-top: 40px;
         font-size: var(--fs-h1);
         font-weight: var(--fw-semi);
         color: var(--clr-headings);
@@ -781,12 +781,17 @@ large screens
 small screens
 *************************************/
 @media (max-width: 800px) {
-    .contact-component--container {
+    .footer--container {
         display: flex;
         background-color: var(--clr-white);
         margin-top: 40px;
         box-shadow: -0.25em -0.25em 0.75em rgba(0,0,0,.25),
                     -0.125em -0.125em 0.25em rgba(0,0,0,.15);
+    }
+
+    .footer--contact-container {
+        width: 80vw;
+        margin-left: 10vw;
     }
 }
 
